add changes to flight,hotel,ticket